# dockpeek-security

./: .gitignore  .mcp.json  PROJECT_PLAN.md  README.md
dockpeek/: .dockerignore  .gitignore  BUILDING.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  config.py  docker-compose-multi-sockets.yml  docker-compose-socket.yml  docker-compose-swarm-socket.yml  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  requirements.txt  run.py  tailwind.config.js
dockpeek/.github/: FUNDING.yml
dockpeek/deploy/: docker-compose.yml
dockpeek/dockpeek/: __init__.py  api_keys.py  auth.py  auto_updater.py  background_scheduler.py  dns_cache.py  docker_utils.py  extensions.py  get_data.py  logs_manager.py  main.py  metrics.py  notifications.py  portainer_client.py  scan_history.py  shared_cache.py  traefik_utils.py  trivy_utils.py  update.py  update_manager.py  version_checker.py
dockpeek/dockpeek/static/css/: fonts.css  logs-viewer.css  styles.css  tailwindcss.css
dockpeek/dockpeek/static/js/: app.js
dockpeek/dockpeek/static/js/modules/: ansi-parser.js  api-keys.js  cell-renderer.js  column-order.js  column-visibility.js  config.js  constants.js  container-stats.js  data-fetch.js  drag-drop.js  events.js  filters.js  logs-viewer.js  modals.js  prune.js  (+12 more)
dockpeek/dockpeek/templates/: _panel.html  index.html  login.html
mcp-server/: pyproject.toml
mcp-server/src/dockpeek_mcp/: __init__.py  app.py  client.py  config.py  server.py
mcp-server/src/dockpeek_mcp/tools/: __init__.py  audit.py  fleet.py  logs.py  scanning.py  security.py  system.py  updates.py
(+1 files in other folders)
